--- a/style/index.css
+++ b/style/index.css
@@ -91,8 +91,7 @@ a {
     text-decoration: none;
 }
 
-
-
+/*----Structure----*/
 .container {
     width: 80%;
     margin: 4% auto;
@@ -112,3 +111,7 @@ a {
 	flex-flow: row nowrap;
 }
 
+/*----Buttons----*/
+.btn {
+	font-size: 4rem;
+}
