--- a/style/index.css
+++ b/style/index.css
@@ -91,7 +91,7 @@ section {
 }
 
 footer {
-	height: 30vh;	
+	height: 40vh;	
 	background-color: #540b0e;
 }
 
@@ -173,7 +173,7 @@ a {
 .footer-flex {
 	display: flex;
 	flex-flow: row wrap;
-	justify-content: center;
+	justify-content: space-around;
 	align-items: center;
 }
 
@@ -202,4 +202,15 @@ a {
 .btn:last-of-type {
 	border-top-right-radius: 10px;
 	border-bottom-right-radius: 10px;
+}
+
+.footer-btn {
+	font-size: 2rem;
+	padding: 4%;
+}
+
+
+/*----Images/Logos----*/
+.LinkedIn {
+	width: 9%;
 }
