--- a/style/index.css
+++ b/style/index.css
@@ -117,15 +117,23 @@ h3 {
 	text-shadow: .2rem .2rem #000;
 }
 
+p {
+	margin-bottom: 2%;
+}
+
 a {
 	text-decoration: none;
 	display: inline-block;	
 	color: #fff3b0;
 }
 
+span {
+	font-weight: 900;
+}
+
 /*----Structure----*/
 .container {
-    width: 60%;
+    width: 80%;
     margin: 4% auto;
 }
 
@@ -183,7 +191,7 @@ a {
 	letter-spacing: .2rem;
 	border: 1px solid #540b0e;
 	width: 15rem;
-	padding: 1% 2%;
+	padding: 1% 1%;
 	color: #9e2a2b;
 	background-color: #fff3b0;
 }
@@ -208,6 +216,13 @@ a {
 	font-size: 2rem;
 	padding: 4%;
 }
+
+.projects-btn {
+	font-size: 2.5rem;
+	width: 22rem;
+	padding: 1% 1%;
+}
+
 
 
 /*----Images/Logos----*/
