--- a/style/index.css
+++ b/style/index.css
@@ -70,8 +70,9 @@ html {
 
 body {	
 	font-family: 'Montserrat', sans-serif;
-    font-size: 2.2rem;
-    font-weight: 300;
+    font-size: 1.8rem;
+	font-weight: 300;
+	letter-spacing: 1px;
 	line-height: 1.7;
 }
 
@@ -95,8 +96,8 @@ footer {
 	background-color: #2e2e2e;
 }
 
-h1, h2, h3, h4, h5, h6 {	
-	font-family: 'Prata', serif;
+h1, h2, h3, h4, h5, h6 {			
+	font-family: 'Prata', serif;	
 	font-weight: 700;
 	margin: 0 2%;
 	color: #335c67;
@@ -119,7 +120,7 @@ h3 {
 }
 
 p {
-	margin: 2% 2%;
+	margin: 0 2%;
 }
 
 a {
