--- a/style/index.css
+++ b/style/index.css
@@ -245,3 +245,37 @@ span {
 	width: 20%;
 	flex-grow: 2;
 }
+
+/*----Media Queries----*/
+
+/*----Tablet Breakpoint----*/
+@media (max-width: 800px) {
+}
+
+
+/*----Phone Breakpoint----*/
+@media (max-width: 500px) {
+	nav {
+		display: flex;
+		flex-flow: column wrap;
+		justify-content: center;
+		align-items: center;
+		margin: 2% 0;
+	}
+
+	.btn:first-of-type {
+		border-top-left-radius: 10px;
+		border-top-right-radius: 10px;
+		border-bottom-left-radius: 0px;
+	}
+	
+	.btn:last-of-type {
+		border-bottom-left-radius: 10px;
+		border-bottom-right-radius: 10px;
+		border-top-right-radius: 0px;
+	}
+
+	.project {
+		width: 40%;
+	}
+}
